upto contact section completed

--- a/index.html
+++ b/index.html
@@ -225,26 +225,120 @@
                         <button class="btn text-uppercase hero-button bt-abt">send</button>
                     </form>
                 </div>
-                <div class="testimonials">
-                    <h2 class="contact-title text-center">Testimonials</h2>
-                    <div class="testimonial-card d-flex align-items-center gap-5">
-                        <figure class="testimonial-img">
-                            <img src="./assets/images/contact_image.jpg" alt="">
-                        </figure>
-                        <div class="name">
-                            <h5 class="testimonial-name">Hindona</h5>
-                            <p class="bio">Businessman</p>
-                        </div>
+                <div class="testimonials testimonial-wrapper">
+                    <div class="testimonial-card">
+                        <h2 class="contact-title">Testimonial</h2>
 
+                        <div id="testimonialCarousel" class="carousel slide" data-bs-ride="false">
+                            <div class="carousel-inner">
+                                <!-- Slide 1 -->
+                                <div class="carousel-item active">
+                                    <!-- Profile Section: Image + Name/Bio side by side -->
+                                    <div class="d-flex align-items-center mb-4">
+                                        <div class="profile-img-box">
+                                            <img src="./assets/images/contact_image.jpg" alt="Hindona"
+                                                class="profile-pic">
+                                            <div class="green-accent-bg"></div>
+                                        </div>
+                                        <div class="ms-4">
+                                            <h5>Hindona</h5>
+                                            <p class="bio-text">Businessman</p>
+                                        </div>
+                                    </div>
+
+                                    <!-- Testimonial Text -->
+                                    <div>
+                                        <p class="testimonial-text">
+                                            that it has a more-or-less normal distribution of letters, as opposed to
+                                            using 'Content here, content here', making it look like readable English.
+                                            Many desktop publishing packages and web page editors nowthat it has a
+                                            more-or-less normal distribution of letters, as opposed to using 'Content
+                                            here, content here', making it look like readable English. Many desktop
+                                            publishing packages and web page editors nowthat it has a more-or-less
+                                            normal distribution of letters, as opposed to using 'Content here, content
+                                            here', making it look like readable English. Many desktop publishing
+                                            packages and web page editors now
+                                        </p>
+                                    </div>
+                                </div>
+
+
+                                <!-- Slide 2 -->
+                                <div class="carousel-item">
+                                    <!-- Profile Section: Image + Name/Bio side by side -->
+                                    <div class="d-flex align-items-center mb-4">
+                                        <div class="profile-img-box">
+                                            <img src="./assets/images/contact_image.jpg" alt="John Doe"
+                                                class="profile-pic">
+                                            <div class="green-accent-bg"></div>
+                                        </div>
+                                        <div class="ms-4">
+                                            <h5>John Doe</h5>
+                                            <p class="bio-text">Developer</p>
+                                        </div>
+                                    </div>
+
+                                    <!-- Testimonial Text -->
+                                    <div>
+                                        <p class="testimonial-text">
+                                            that it has a more-or-less normal distribution of letters, as opposed to
+                                            using 'Content here, content here', making it look like readable English.
+                                            Many desktop publishing packages and web page editors nowthat it has a
+                                            more-or-less normal distribution of letters, as opposed to using 'Content
+                                            here, content here', making it look like readable English. Many desktop
+                                            publishing packages and web page editors nowthat it has a more-or-less
+                                            normal distribution of letters, as opposed to using 'Content here, content
+                                            here', making it look like readable English. Many desktop publishing
+                                            packages and web page editors now
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <!-- Slide 3 -->
+                                <div class="carousel-item">
+                                    <!-- Profile Section: Image + Name/Bio side by side -->
+                                    <div class="d-flex align-items-center mb-4">
+                                        <div class="profile-img-box">
+                                            <img src="./assets/images/contact_image.jpg" alt="Jane Smith"
+                                                class="profile-pic">
+                                            <div class="green-accent-bg"></div>
+                                        </div>
+                                        <div class="ms-4">
+                                            <h5>Jane Smith</h5>
+                                            <p class="bio-text">Designer</p>
+                                        </div>
+                                    </div>
+
+                                    <!-- Testimonial Text -->
+                                    <div>
+                                        <p class="testimonial-text">
+                                            that it has a more-or-less normal distribution of letters, as opposed to
+                                            using 'Content here, content here', making it look like readable English.
+                                            Many desktop publishing packages and web page editors nowthat it has a
+                                            more-or-less normal distribution of letters, as opposed to using 'Content
+                                            here, content here', making it look like readable English. Many desktop
+                                            publishing packages and web page editors nowthat it has a more-or-less
+                                            normal distribution of letters, as opposed to using 'Content here, content
+                                            here', making it look like readable English. Many desktop publishing
+                                            packages and web page editors now
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Navigation Arrows -->
+                            <div class="custom-nav-box">
+                                <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev"
+                                    class="nav-arrow">
+                                    &lt;
+                                </button>
+                                <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next"
+                                    class="nav-arrow">
+                                    &gt;
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <p class="testimonial-description">that it has a more-or-less normal distribution of letters, as
-                        opposed to using 'Content here, content here', making it look like readable English. Many
-                        desktop publishing packages and web page editors nowthat it has a more-or-less normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look like
-                        readable English. Many desktop publishing packages and web page editors nowthat it has a
-                        more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
-                        making it look like readable English. Many desktop publishing packages and web page editors now
-                    </p>
                 </div>
             </div>
         </div>
