--- a/index.html
+++ b/index.html
@@ -343,6 +343,58 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container-post">
+            <nav class="footer-nav d-flex justify-content-between align-items-center flex-direction-column">
+                <div class="logo d-flex align-items-center">
+                    <h2 class="text-light text-uppercase custom-logo-footer">Bloger</h2>
+                </div>
+                <ul class="d-flex justify-content-between gap-5">
+                    <li><a href="#" class="text-light footer-nav-text-custom text-uppercase">Home</a></li>
+                    <li><a href="#" class="text-light footer-nav-text-custom text-uppercase">About</a></li>
+                    <li><a href="#" class="text-light footer-nav-text-custom text-uppercase">Blogs</a></li>
+                    <li><a href="#" class="text-light footer-nav-text-custom text-uppercase">Testimonials</a></li>
+                    <li><a href="#" class="text-light footer-nav-text-custom text-uppercase">Contact Us</a></li>
+                </ul>
+                <div class="social-links">
+                    <ul class="d-flex justify-content-between align-items-center gap-4">
+                        <li><a href="#"><img src="./assets/images/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="./assets/images/twitter.png" alt=""></a></li>
+                        <li><a href="#"><img src="./assets/images/linked.png" alt=""></a></li>
+                        <li><a href="#"><img src="./assets/images/instagram.png" alt=""></a></li>
+
+                    </ul>
+                </div>
+            </nav>
+            <div class="devider"></div>
+            <div class="row d-flex justify-content-center align-items-center flex-direction-column">
+                <div class="col-12 pb-5">
+                    <h3 class="text-center text-uppercase suscribe">Suscribe Now</h3>
+                </div>
+                <form action="" class="d-flex justify-content-center align-items-center">
+                    <input type="text" placeholder="Enter Your Email" class="form-control custom-input">
+                    <button type="submit" class="btn btn-footer"><img src="./assets/images/button_arrow.png"
+                            alt=""></button>
+                </form>
+                <ul class="d-flex justify-content-center align-items-center pt-5 gap-4 gap-90">
+                    <li class="d-flex gap-2 align-items-center"><a href="#"><img src="./assets/images/phone.png"
+                                alt=""></a>
+                        <p>Call: +01 1234567890</p>
+                    </li>
+                    <li class="d-flex gap-2 align-items-center"><a href="#"><img src="./assets/images/message.png"
+                                alt=""></a>
+                        <p>
+                            demo@email.com
+                        </p>
+                    </li </ul>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="text-center copyright">© 2020 All Rights Reserved. Design by Free Html Templates.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
